Refactor Country enum.
* Add private static byQueryPredicate(:Predicate<Country>) method.
* Refactor byIsoNumeric(..), byIsoThree(..) and byIsoTwo(..) factory methods to call byQueryPredicate(:Predicate<Country>).
* Refactor localCountry() method to call byIsoThree(..).
* Annotate API with Elements @NotNull and @Nullable annotations.
* Edit Javadoc.